# Mosaic

./: .gitignore  .prettierignore  404.html  CLAUDE.md  CONTRIBUTORS.md  README.md  README.zh.md  __next.!KGhvbWUp.__PAGE__.txt  __next.!KGhvbWUp.txt  __next._full.txt  __next._head.txt  __next._tree.txt  _not-found.html  docs.html  docs.txt  eslint.config.js  index.html  index.txt  mosaic.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vite.config.ts  zh.html  zh.txt
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
server/admin-ui/: README.md  README.zh.md  index.html  package.json  tsconfig.app.json  vite.config.ts
server/migrations/: 20250118000001_init_tables.sql  20260119083515_init_tables.sql  20260312090138_add_resource_metadata.sql  20260323091908_add_memos_ai_summary.sql  20260421123549_add_bot_system.sql  20260422132417_add_bot_vision_enabled.sql  20260423052520_add_bot_reply_resources.sql  20260424120002_add_bot_reply_thinking.sql  20260424120003_drop_bot_vision_enabled.sql  20260426082314_add_sync_support.sql  20260427140345_add_bot_memory_core.sql  20260427140516_add_bot_memory_debug_logs.sql  20260427151211_add_ai_config_to_bots.sql  20260428042820_add_server_ai_config.sql  20260428080343_add_ai_config_capabilities.sql  20260428102647_add_embedding_dim_to_ai_config.sql  20260430052615_fix_embedding_dimension.sql  20260430162426_drop_user_memory_profiles.sql  20260430163549_drop_memo_episodes.sql  20260430165158_drop_selected_episode_ids.sql  20260430185451_app_settings.sql  (+17 more)
(+1072 files in other folders)
