[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "9.0", features = ["use_pem"] }
bcrypt = "0.16"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
opendal = { version = "0.50", features = ["services-s3"] }
bytes = "1.0"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
futures-util = "0.3"
actix-multipart = "0.7"
rand = "0.8"
